image-upload/server-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - image: gcr.io/image-upload-352017/myapp:latest
        name: server
        ports:
        - containerPort: 5000
          name: http-server
